# ai-driven-application

./: .env  .env.example  .gitignore  AGENTS.md  README.md  bao_cao_graphiti_chat_lab.md  pyproject.toml  report_requirement.md  run.sh
app/: __init__.py  fact_filter.py  graphiti_client.py  llm_client.py  main.py  memory_store.py  schemas.py  time_utils.py
app/templates/: index.html
bao_cao_graphiti_chat_lab/: 00_tom_tat.md  00_trang_bia_va_muc_luc.md  01_chuong_1_gioi_thieu.md  02_chuong_2_tong_quan_va_co_so_ly_thuyet.md  03_chuong_3_thiet_ke_va_phat_trien_san_pham.md  04_chuong_4_trien_khai_va_mo_hinh_kinh_doanh.md  05_chuong_5_ket_luan_va_kien_nghi.md  06_tai_lieu_tham_khao.md  07_phu_luc.md
docs/: memory_eval_handoff.md  memory_runtime_rebuild_plan.md
evals/: README.md  live_scenarios.json  natural_smoke_scenarios.json  run_live_eval.py  target_scenarios.json
evals/reports/: live-eval-companion-flash-full-20260607-001.json  live-eval-companion-flash-full-20260607-001.md  live-eval-companion-flash-smoke-20260607-001.json  live-eval-companion-flash-smoke-20260607-001.md  live-eval-full-local-20260607-002.json  live-eval-full-local-20260607-002.md  live-eval-smoke-local-20260607-002.json  live-eval-smoke-local-20260607-002.md
plans/260606-graphiti-chat-lab/: plan.md
tests/: test_fact_filter.py  test_graphiti_client.py  test_llm_client.py  test_memory_store.py
